--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "braft-editor": "^2.2.9",
     "draft-js": "^0.10.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
