cong update upload image

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.18.3",
     "braft-editor": "^2.2.9",
     "draft-js": "^0.10.5",
+    "express-fileupload": "^1.1.4",
     "qs": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
