--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "braft-editor": "^2.2.9",
+    "cors": "^2.8.5",
     "draft-js": "^0.10.5",
     "express-fileupload": "^1.1.4",
+    "node-fetch": "^2.3.0",
     "qs": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
