--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-URL_SERVER = http://localhost:3002
+URL_SERVER = http://localhost:3001
 URL_FETCH_DOMAINS = /domain/getDomains
+URL_SERVER_IMAGE = http://localhost:3001/images/
